--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
+      </nav>
         <ul>
           <li><a href="">info@devstudio.com</a></li>
           <li><a href="">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
     </header>
     <section>
       <h1>Ефективні рішення для вашого бізнесу</h1>
-      <button>Замовити послугу</button>
+      <button type="button"> Замовити послугу</button>
     </section>
     <main>
       <section>
@@ -63,13 +63,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="./img/box-1.jpg" alt="Activity1" />
+            <img src="./img/box-1.jpg" alt="Діяльність1" width="370" height="294" />
           </li>
           <li>
-            <img src="./img/box-2.jpg" alt="Activity2" />
+            <img src="./img/box-2.jpg" alt="Діяльність2" width="370" height="294" />
           </li>
           <li>
-            <img src="./img/box-3.jpg" alt="Activity3" />
+            <img src="./img/box-3.jpg" alt="Діяльність3" width="370" height="294" />
           </li>
         </ul>
       </section>
@@ -77,22 +77,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./img/Worker-1.jpg" alt="Worker1" />
+            <img src="./img/Worker-1.jpg" alt="Працівник1" width="270" height="260" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./img/Worker-2.jpg" alt="Worker2" />
+            <img src="./img/Worker-2.jpg" alt="Працівник2" width="270" height="260" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./img/Worker-3.jpg" alt="Worker3" />
+            <img src="./img/Worker-3.jpg" alt="Працівник3" width="270" height="260" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./img/Worker-4.jpg" alt="Worker4" />
+            <img src="./img/Worker-4.jpg" alt="Працівник4" width="270" height="260" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
@@ -100,8 +100,6 @@
       </section>
     </main>
     <footer>
-      <section>
-        <h2>Контактна інформація</h2>
         <a href="">WebStudio</a>
         <address>
           <ul>
@@ -118,7 +116,6 @@
             </li>
           </ul>
         </address>
-      </section>
     </footer>
   </body>
 </html>
