--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
           <ul>
             <li>
               <a href="https://goo.gl/maps/pz3UQcwL6n8fsx3L7"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+                >м. Київ, пр-т Лесі Українки, 26</a>
             </li>
             <li>
               <a href="mailto:info@devstudio.com">info@devstudio.com</a>
